--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "source/sass/**/*.{sass,scss}"
   ],
   "engines": {
-    "node": "8.16"
+    "node": "12.x"
   },
   "dependencies": {
     "del": "^5.1.0",
